--- a/.github/workflows/release-sdks.yml
+++ b/.github/workflows/release-sdks.yml
@@ -101,4 +101,4 @@ jobs:
     - name: Publish to Apache Maven Central
       run: |
         cd ${{ env.JAVA_SDK_LOCATION }}
-        mvn -Psign-artifacts verify deploy
+        mvn -Psign-artifacts verify
